--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
 <div class="container">
     <div class="row">
         <h1><a href="#">Code Captain</a></h1>
-        <h4>Build and pick teams.</h4>
+        <h4>Build and pick teams of coders.</h4>
         <hr/>
     </div>
   <!--[if lt IE 7]>
