--- a/app/index.html
+++ b/app/index.html
@@ -22,22 +22,33 @@
     <div class="row" style="margin-top: 24px;">
         <div class="navbar">
             <div class="container-fluid">
-                <div class="navbar-header">
-                    <div style=" line-height: .75;">
-                        <p><a href="#" style="font-size: 200%;">Code Captain</a></p>
-                        <p style="font-style: italic; color: #555;">Build and pick teams of coders.</p>
+                <div class="row">
+                    <div class="col-xs-4">
+                        <div class="navbar-header">
+                            <div style=" line-height: .75;">
+                                <p><a href="#" style="font-size: 200%;">Code Captain</a></p>
+
+                                <p style="font-style: italic; color: #555;">Build and pick teams of coders.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-8">
+                        <ul class="nav nav-pills pull-right" ng-controller="MenuCtrl">
+                            <li ng-class="{active: active('/projects')}"><a href="#/projects">All Projects</a></li>
+                            <li ng-class="{active: active('/users')}"><a href="#/users">All Users</a></li>
+                            <li class="nav-divider"></li>
+                            <li ng-class="{active: active('/new/project')}" ng-show="loggedIn"><a href="#/new/project">New
+                                Project</a></li>
+                            <li ng-class="{active: active('/login')}" ng-show="!loggedIn"><a href="#/login">Log In</a>
+                            </li>
+                            <li ng-class="{active: active('/new/user')}" ng-show="!loggedIn"><a href="#/new/user"
+                                                                                                class="login">Join</a>
+                            </li>
+                            <li ng-show="loggedIn"><a href="#/" ng-click="logout()">Log Out</a></li>
+                            <li ng-show="loggedIn"><a href="#/user/{{currentUser}}">{{ currentUser }}</a></li>
+                        </ul>
                     </div>
                 </div>
-                <ul class="nav nav-pills pull-right" ng-controller="MenuCtrl">
-                    <li ng-class="{active: active('/projects')}"><a href="#/projects">All Projects</a></li>
-                    <li ng-class="{active: active('/users')}"><a href="#/users">All Users</a></li>
-                    <li class="nav-divider"></li>
-                    <li ng-class="{active: active('/new/project')}" ng-show="loggedIn"><a href="#/new/project">New Project</a></li>
-                    <li ng-class="{active: active('/login')}" ng-show="!loggedIn"><a href="#/login">Log In</a></li>
-                    <li ng-class="{active: active('/new/user')}" ng-show="!loggedIn"><a href="#/new/user" class="login">Join</a></li>
-                    <li ng-show="loggedIn"><a href="#/" ng-click="logout()">Log Out</a></li>
-                    <li ng-show="loggedIn"><a href="#/user/{{currentUser}}">{{ currentUser }}</a></li>
-                </ul>
             </div>
             <div class="col-sm-12">
                 <hr style="margin: 12px 0 0"/>
